Fix issue with photos names

--- a/mainapp/static/mainapp/sedona/catalog.html
+++ b/mainapp/static/mainapp/sedona/catalog.html
@@ -111,7 +111,7 @@
     <form method="POST">
       <div class="booking-block">
         <div class="booking-hotel">
-          <img src="img/Layer 21.jpg" width="135" height="90" alt="Amara Resort & Spa">
+          <img src="img/Layer-21.jpg" width="135" height="90" alt="Amara Resort & Spa">
             <div class="booking">
               <button class="booking-hotel__head" href="#">Amara Resort & Spa</button>
                 <div class="hotel-title">
@@ -156,7 +156,7 @@
       </div>
       <div class="booking-block">
         <div class="booking-hotel">
-          <img src="img/Layer 89 copy.jpg" width="135" height="90" alt="Desert Quail Inn">
+          <img src="img/Layer-89.jpg" width="135" height="90" alt="Desert Quail Inn">
             <div class="booking">
               <button class="booking-hotel__head" href="#">Desert Quail Inn</button>
                 <div class="hotel-title">
